@@ -2,42 +2,41 @@ package dojo.supermarket.model;
 
 import org.junit.jupiter.api.Test;
 
+import java.math.BigDecimal;
 import java.util.Collections;
 
+import static dojo.supermarket.model.TestHelper.assertBigDecimalEquals;
+import static dojo.supermarket.model.TestHelper.bd;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class SupermarketTest {
-
-    // Todo: test all kinds of discounts are applied properly
 
     @Test
     void tenPercentDiscount() {
         SupermarketCatalog catalog = new FakeCatalog();
         Product toothbrush = new Product("toothbrush", ProductUnit.EACH);
-        catalog.addProduct(toothbrush, 0.99);
+        catalog.addProduct(toothbrush, bd(0.99));
         Product apples = new Product("apples", ProductUnit.KILO);
-        catalog.addProduct(apples, 1.99);
+        catalog.addProduct(apples, bd(1.99));
 
         Teller teller = new Teller(catalog);
-        teller.addSpecialOffer(SpecialOfferType.TEN_PERCENT_DISCOUNT, toothbrush, 10.0);
+        teller.addSpecialOffer(SpecialOfferType.TEN_PERCENT_DISCOUNT,
+                toothbrush, bd(10.0));
 
         ShoppingCart cart = new ShoppingCart();
-        cart.addItemQuantity(apples, 2.5);
-        
-        // ACT
+        cart.addItemQuantity(apples, bd(2.5));
+
         Receipt receipt = teller.checksOutArticlesFrom(cart);
 
-        // ASSERT
-        assertEquals(4.975, receipt.getTotalPrice(), 0.01);
+        assertBigDecimalEquals(bd(4.975), receipt.getTotalPrice());
         assertEquals(Collections.emptyList(), receipt.getDiscounts());
         assertEquals(1, receipt.getItems().size());
-        ReceiptItem receiptItem = receipt.getItems().get(0);
+        ReceiptItem receiptItem = receipt.getItems().getFirst();
         assertEquals(apples, receiptItem.product());
-        assertEquals(1.99, receiptItem.price());
-        assertEquals(2.5*1.99, receiptItem.totalPrice());
-        assertEquals(2.5, receiptItem.quantity());
-
+        assertBigDecimalEquals(bd(1.99), receiptItem.price());
+        BigDecimal expectedTotal = bd(2.5).multiply(bd(1.99));
+        assertBigDecimalEquals(expectedTotal, receiptItem.totalPrice());
+        assertBigDecimalEquals(bd(2.5), receiptItem.quantity());
     }
-
-
 }
+
