@@ -5,9 +5,13 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
+import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.util.HashMap;
 import java.util.Map;
 
+import static dojo.supermarket.model.TestHelper.assertBigDecimalEquals;
+import static dojo.supermarket.model.TestHelper.bd;
 import static org.junit.jupiter.api.Assertions.*;
 
 @DisplayName("Bundle Discount Tests")
@@ -22,22 +26,21 @@ class BundleDiscountTest {
 
     @BeforeEach
     void setUp() {
-        catalog = new dojo.supermarket.model.FakeCatalog();
+        catalog = new FakeCatalog();
         teller = new Teller(catalog);
 
         toothbrush = new Product("toothbrush", ProductUnit.EACH);
         toothpaste = new Product("toothpaste", ProductUnit.EACH);
         apples = new Product("apples", ProductUnit.KILO);
 
-        catalog.addProduct(toothbrush, 0.99);
-        catalog.addProduct(toothpaste, 1.79);
-        catalog.addProduct(apples, 1.99);
+        catalog.addProduct(toothbrush, bd(0.99));
+        catalog.addProduct(toothpaste, bd(1.79));
+        catalog.addProduct(apples, bd(1.99));
     }
 
     @Test
     @DisplayName("Should apply bundle discount when all products are purchased")
     void shouldApplyBundleDiscountWhenComplete() {
-        // Create bundle: toothbrush + toothpaste
         Map<Product, Integer> bundleProducts = new HashMap<>();
         bundleProducts.put(toothbrush, 1);
         bundleProducts.put(toothpaste, 1);
@@ -47,19 +50,18 @@ class BundleDiscountTest {
         teller.addProductBundle(bundle);
 
         ShoppingCart cart = new ShoppingCart();
-        cart.addItemQuantity(toothbrush, 1);
-        cart.addItemQuantity(toothpaste, 1);
+        cart.addItemQuantity(toothbrush, bd(1));
+        cart.addItemQuantity(toothpaste, bd(1));
 
         Receipt receipt = teller.checksOutArticlesFrom(cart);
 
-        // Bundle price: 0.99 + 1.79 = 2.78
-        // Discount: 10% of 2.78 = 0.278
-        // Total: 2.78 - 0.278 = 2.502
-        assertEquals(2.502, receipt.getTotalPrice(), 0.01);
+        BigDecimal expected = bd(0.99).add(bd(1.79))
+                .multiply(bd(0.9));
+        assertBigDecimalEquals(expected, receipt.getTotalPrice());
 
-        // Should have one bundle discount
         assertEquals(1, receipt.getDiscounts().size());
-        assertTrue(receipt.getDiscounts().getFirst().description().contains("Dental Care Bundle"));
+        assertTrue(receipt.getDiscounts().get(0).description()
+                .contains("Dental Care Bundle"));
     }
 
     @Test
@@ -74,12 +76,11 @@ class BundleDiscountTest {
         teller.addProductBundle(bundle);
 
         ShoppingCart cart = new ShoppingCart();
-        cart.addItemQuantity(toothbrush, 1);
-        // Missing toothpaste
+        cart.addItemQuantity(toothbrush, bd(1));
 
         Receipt receipt = teller.checksOutArticlesFrom(cart);
 
-        assertEquals(0.99, receipt.getTotalPrice(), 0.01);
+        assertBigDecimalEquals(bd(0.99), receipt.getTotalPrice());
         assertTrue(receipt.getDiscounts().isEmpty());
     }
 
@@ -95,17 +96,15 @@ class BundleDiscountTest {
         teller.addProductBundle(bundle);
 
         ShoppingCart cart = new ShoppingCart();
-        cart.addItemQuantity(toothbrush, 2);
-        cart.addItemQuantity(toothpaste, 2);
+        cart.addItemQuantity(toothbrush, bd(2));
+        cart.addItemQuantity(toothpaste, bd(2));
 
         Receipt receipt = teller.checksOutArticlesFrom(cart);
 
-        // 2 complete bundles
-        // Bundle price: 2.78 each
-        // Discount per bundle: 0.278
-        // Total discount: 0.556
-        // Total: 5.56 - 0.556 = 5.004
-        assertEquals(5.004, receipt.getTotalPrice(), 0.01);
+        BigDecimal bundlePrice = bd(0.99).add(bd(1.79));
+        BigDecimal expected = bundlePrice.multiply(bd(2))
+                .multiply(bd(0.9));
+        assertBigDecimalEquals(expected, receipt.getTotalPrice());
     }
 
     @Test
@@ -120,16 +119,18 @@ class BundleDiscountTest {
         teller.addProductBundle(bundle);
 
         ShoppingCart cart = new ShoppingCart();
-        cart.addItemQuantity(toothbrush, 3);
-        cart.addItemQuantity(toothpaste, 2);
+        cart.addItemQuantity(toothbrush, bd(3));
+        cart.addItemQuantity(toothpaste, bd(2));
 
         Receipt receipt = teller.checksOutArticlesFrom(cart);
 
-        // 2 complete bundles (limited by toothpaste quantity)
-        // Bundle discount for 2 bundles: 2 * 0.278 = 0.556
-        // Total before discount: 3*0.99 + 2*1.79 = 2.97 + 3.58 = 6.55
-        // Total after discount: 6.55 - 0.556 = 5.994
-        assertEquals(5.994, receipt.getTotalPrice(), 0.01);
+        BigDecimal totalBefore = bd(3).multiply(bd(0.99))
+                .add(bd(2).multiply(bd(1.79)));
+        BigDecimal bundleDiscount = bd(0.99).add(bd(1.79))
+                .multiply(bd(0.1))
+                .multiply(bd(2));
+        BigDecimal expected = totalBefore.subtract(bundleDiscount);
+        assertBigDecimalEquals(expected, receipt.getTotalPrice());
     }
 
     @Test
@@ -144,41 +145,40 @@ class BundleDiscountTest {
         teller.addProductBundle(bundle);
 
         ShoppingCart cart = new ShoppingCart();
-        cart.addItemQuantity(toothbrush, 2);
-        cart.addItemQuantity(toothpaste, 3);
+        cart.addItemQuantity(toothbrush, bd(2));
+        cart.addItemQuantity(toothpaste, bd(3));
 
         Receipt receipt = teller.checksOutArticlesFrom(cart);
 
-        // Bundle price: 2*0.99 + 3*1.79 = 1.98 + 5.37 = 7.35
-        // Discount: 10% of 7.35 = 0.735
-        // Total: 7.35 - 0.735 = 6.615
-        assertEquals(6.615, receipt.getTotalPrice(), 0.01);
+        BigDecimal bundlePrice = bd(2).multiply(bd(0.99))
+                .add(bd(3).multiply(bd(1.79)));
+        BigDecimal discountAmount = bundlePrice.multiply(bd(0.1))
+                .setScale(2, RoundingMode.HALF_UP);
+        BigDecimal expected = bundlePrice.subtract(discountAmount);
+        assertBigDecimalEquals(expected, receipt.getTotalPrice());
+        assertEquals(1, receipt.getDiscounts().size());
     }
 
     @Test
-    @DisplayName("Should combine bundle discount with regular offers")
-    void shouldCombineBundleDiscountWithRegularOffers() {
+    @DisplayName("Should handle custom bundle discount percentage")
+    void shouldHandleCustomBundleDiscountPercentage() {
         Map<Product, Integer> bundleProducts = new HashMap<>();
         bundleProducts.put(toothbrush, 1);
         bundleProducts.put(toothpaste, 1);
-        ProductBundle bundle = ProductBundle.withDefaultDiscount(
-                "Dental Care Bundle", bundleProducts);
+        ProductBundle bundle = new ProductBundle(
+                "Special Bundle", bundleProducts, bd(20.0));
 
         teller.addProductBundle(bundle);
-        teller.addSpecialOffer(SpecialOfferType.TEN_PERCENT_DISCOUNT, apples, 20.0);
 
         ShoppingCart cart = new ShoppingCart();
-        cart.addItemQuantity(toothbrush, 1);
-        cart.addItemQuantity(toothpaste, 1);
-        cart.addItemQuantity(apples, 2.0);
+        cart.addItemQuantity(toothbrush, bd(1));
+        cart.addItemQuantity(toothpaste, bd(1));
 
         Receipt receipt = teller.checksOutArticlesFrom(cart);
 
-        // Bundle: 2.78 - 0.278 = 2.502
-        // Apples: 2 * 1.99 = 3.98, with 20% off = 3.98 * 0.8 = 3.184
-        // Total: 2.502 + 3.184 = 5.686
-        assertEquals(5.686, receipt.getTotalPrice(), 0.01);
-        assertEquals(2, receipt.getDiscounts().size());
+        BigDecimal expected = bd(0.99).add(bd(1.79))
+                .multiply(bd(0.8));
+        assertBigDecimalEquals(expected, receipt.getTotalPrice());
     }
 }
 
